    * Chunky now remembers the number number of render threads setting
    * Sanitize scene names by removing problematic characters
    * Manually unlocking the render lock now leaves the render controls
    unlocked until rendering is re-started
    * Re-loading chunks using the "Load Selected Chunks" button does not
    move the camera

1.1.11 - 2013-04-28
    * It is now possible to lock the render controls to avoid inadvertent
    render restarts.  The locking can be either manual or automatic.
    * Adjusted the depth of field effect - depth of field is now planar again.
    This reverts the spherical depth of field effect from 1.1.10
    * Renamed the "Focal Offset" setting to "Subject Distance"
    * The Windows installer skips overwriting the (more memory) shortcut if
    it already exists
    * Fixed error causing emitter and sun intensity values below one to
    be equal to be forced to zero
    * Fixed error in headless mode that prevented rendering to start
    * Fixed crash when rendering in Water World mode
    * Water World check-box is correctly updated to reflect the current setting

1.1.10 - 2013-04-20
    * Added Emerald Ore and Nether Quartz Ore to the block highlight list
    * Added new projection modes (TOGoS)

1.1.9 - 2013-04-15
    * Disabled painting of slider values above slider knob in GTK/Snyth L&F
    * Add suffix to scene name to avoid scene name collisions
    * Removed need to pick scene name if scene name collision can be
	automatically avoided
    * Fixed undirectional furnaces being invisible
    * Fixed error causing double wooden slabs to render as single slabs
    * Improved command-line error checking
    * Added command-line option to override SPP target in headless mode
    * Fixed corner stair rendering errors (inner corners and quartz corner
    stairs rendered as non-corner stairs)

1.1.8 - 2013-03-27
    * Chunky now exits after completing a render in command-line mode